--- a/views/home.html
+++ b/views/home.html
@@ -32,13 +32,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SmartPie</a>
+          <a class="navbar-brand" href="/">SmartPie</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/switches">Switches</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class='{{ if eq .Request.URL.Path "/switches" }} active {{ end }}'>
+              <a href="/switches">Switches</a>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
