--- a/views/home.html
+++ b/views/home.html
@@ -13,16 +13,23 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-toggle.min.css" rel="stylesheet">
 
     <style>
       body {
         padding-top: 50px;
       }
+
+      .switches {
+        padding: 30px;
+      }
+      .switch {
+        margin: 10px;
+      }
     </style>
   </head>
 
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -45,12 +52,10 @@
     </nav>
 
     <div class="container">
-
-      <div>
-        <h1>SmartPie</h1>
-        <p class="lead">Smart house control panel from the future!</p>
+      <div class="row switches">
+        <div id="app" class="col-sm-12">
+        </div>
       </div>
-
     </div><!-- /.container -->
 
 
@@ -60,4 +65,13 @@
     <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
   </body>
+
+  <script src="js/app.js"></script>
+  <script src="js/bootstrap-toggle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+  <script id="switch_template" type="x-tmpl-mustache">
+    [[#pins]]
+    Node [[ @key ]]
+    [[/pins]]
+  </script>
 </html>
